--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,9 @@
 title = "Messages"
 baseURL = "https://tjfinney-messages.netlify.com/"
 languageCode = "en-us"
-theme = "ananke"
-themesDir = "./themes"
+theme = ["github.com/theNewDynamic/gohugo-theme-ananke"]
+resourceDir = "../resources"
 
-MetaDataFormat = "yaml"
 DefaultContentLanguage = "en"
 SectionPagesMenu = "main"
 Paginate = 3 # this is set low for demonstrating with dummy content. Set to a higher number
@@ -17,15 +16,16 @@ enableRobotsTXT = true
   filename = "sitemap.xml"
 
 [params]
+  text_color = ""
+  author = ""
   favicon = ""
+  site_logo = ""
   description = "The last theme you'll ever need. Maybe."
-  facebook = ""
-  twitter = "https://twitter.com/GoHugoIO"
-  instagram = ""
-  youtube = ""
-  github = ""
-  linkedin = ""
-  # choose a background color from any on this page: http://tachyons.io/docs/themes/skins/ and preface it with "bg-"
+  # choose a background color from any on this page: https://tachyons.io/docs/themes/skins/ and preface it with "bg-"
   background_color_class = "bg-black"
-  featured_image = "images/Busselton_sunset_sm.jpg"
-  recent_posts_number = 2
+  featured_image = "/images/Busselton_sunset_sm.jpg"
+  recent_posts_number = 3
+
+[[params.ananke_socials]]
+name = "twitter"
+url = "https://twitter.com/GoHugoIO"
